polish: Waterfall Quest (#2269)
* refactor: modernize

* test: opt into sidebar step

* remove todo that's already been implemented

* step1: direction

* fix: quest sart dialog highlight

* item req cleanup

* rope requirement when boarding raft

* step to leave home south of Almera

* check pebble in inv or bank instead of golrie conversation

* nit: reword usepebblestep

* equip amulet step

* fix "get glarial's stuff" steps

it didn't check for the correct amulet

* nit: reword west door entering step

* nit: highlight urn when prompted to use it on the chalice

* chore: license